# CoreCVSWServer

./: .gitignore  CMakeLists.txt  LibEventServer.h  customCallbacks.h  libEventApp.h  main.cpp
Pages/: index.template.html
Pages/css/: style.css
Pages/html/: Content.html
Pages/js/: main.js
examples/BasicServer/: customCallbacks.h  main.cpp
examples/CoreCVS/: ImageGenerator.h  RPYTGenerator.h  customCallbacks.h  main.cpp
examples/CoreCVS/Pages/: index.html  index.template.html
examples/CoreCVS/Pages/css/: style.css
examples/CoreCVS/Pages/html/: Content.html
examples/CoreCVS/Pages/js/: main.js
